--- a/test.ipynb
+++ b/test.ipynb
@@ -2,24 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "\n",
-    "# Read image\n",
     "img = cv2.imread(\"assets/enid.png\")\n",
-    "\n",
-    "# Show image\n",
     "cv2.imshow(\"Enid\", img)\n",
+    "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,11 +36,10 @@
     "\n",
     "img = cv2.imread(\"assets/enid.png\", cv2.IMREAD_GRAYSCALE)\n",
     "cv2.imshow(\"Convert\", img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "cv2.imwrite('path_to_output.jpg', img)\n",
     "\n",
-    "# Write image\n",
-    "cv2.imwrite('path_to_output.jpg', img)"
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -154,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
