restructure folders, again

--- a/1_Working_With_Images/CODE.ipynb
+++ b/1_Working_With_Images/CODE.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"../assets/enid.png\")"
+    "img = cv2.imread(\"../assets/Enid.jpeg\")"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +69,13 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv2.imwrite('output/enid.jpg', img)"
+    "cv2.imwrite('output/Enid_Gray.jpeg', img)"
    ]
   },
   {
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_gray = cv2.imread(\"../assets/enid.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "img_gray = cv2.imread(\"../assets/Enid.jpeg\", cv2.IMREAD_GRAYSCALE)\n",
     "cv2.imshow(\"Enid Gray\", img_gray)\n",
     "\n",
     "cv2.waitKey(0)\n",
@@ -107,12 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img1 = cv2.imread(\"../assets/enid.png\")\n",
-    "img2 = cv2.imread(\"../assets/enid.png\")\n",
+    "img1 = cv2.imread(\"../assets/Enid.jpeg\")\n",
+    "img2 = cv2.imread(\"../assets/Enid.jpeg\")\n",
     "\n",
     "add_img = cv2.add(img1, img2)\n",
     "\n",
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
