--- a/1_Working_With_Images/CODE.ipynb
+++ b/1_Working_With_Images/CODE.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(\"../assets/Enid.jpeg\")"
+    "img = cv2.imread(\"../assets/Anya.jpeg\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.imshow(\"Enid\", img)\n",
+    "cv2.imshow(\"Anya\", img)\n",
     "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 4,
@@ -75,7 +75,33 @@
     }
    ],
    "source": [
-    "cv2.imwrite('output/Enid_Gray.jpeg', img)"
+    "cv2.imwrite('Output.jpeg', img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Get Image Information**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(736, 736, 3)\n",
+      "[210 220 254]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(img.shape)\n",
+    "print(img[100,100])"
    ]
   },
   {
@@ -87,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_gray = cv2.imread(\"../assets/Enid.jpeg\", cv2.IMREAD_GRAYSCALE)\n",
-    "cv2.imshow(\"Enid Gray\", img_gray)\n",
+    "img_gray = cv2.imread(\"../assets/Anya.jpeg\", cv2.IMREAD_GRAYSCALE)\n",
+    "cv2.imshow(\"Anya Gray\", img_gray)\n",
     "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -107,17 +133,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img1 = cv2.imread(\"../assets/Enid.jpeg\")\n",
-    "img2 = cv2.imread(\"../assets/Enid.jpeg\")\n",
+    "img1 = cv2.imread(\"../assets/Anya.jpeg\")\n",
+    "img2 = cv2.imread(\"../assets/Anya_2.jpeg\")\n",
     "\n",
     "add_img = cv2.add(img1, img2)\n",
+    "subtract_img = cv2.subtract(img1, img2)\n",
+    "add_weight_img = cv2.addWeighted(img1, 0.5, img2, 0.5, 0)\n",
     "\n",
-    "cv2.imshow(\"add\", add_img)\n",
+    "cv2.imshow(\"Anya learn Math\", add_img)\n",
     "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Read and Display Multiple Images**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "\n",
+    "path = glob.glob(\"../assets/*.jpeg\")\n",
+    "\n",
+    "for index, file in enumerate(path):\n",
+    "    img = cv2.imread(file)\n",
+    "    cv2.imshow(f'Image {index + 1}', img)\n",
+    "    \n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
@@ -139,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
